update dependency versions set parameter for wildfly